--- a/adserv_examples/minimal_banner.html
+++ b/adserv_examples/minimal_banner.html
@@ -4,6 +4,6 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<script src="https://raw.githubusercontent.com/briandemant/random_stuff/master/adserv_examples/minimal_banner.js?clickTag=http://briandemant.dk/?"></script>
+	<script src="minimal_banner.js?clickTag=http://briandemant.dk/?"></script>
 </body>
 </html>
