--- a/adserv_examples/minimal_banner.html
+++ b/adserv_examples/minimal_banner.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 </head>
 <body>
+	<script src="minimal_banner.js?clickTAG=http://hans.dk/?"></script>
 	<script src="minimal_banner.js?clickTAG=http://briandemant.dk/?"></script>
+	<script src="minimal_banner.js?clickTAG=http://peter.dk/?"></script>
 </body>
 </html>
